workspace = { members = ["hf_codegen","hf_parser"] }

[package]
name = "holyfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hf_parser = { path = "hf_parser" }
hf_codegen = { path = "hf_codegen" }
