[package]
name = "hf_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "2.0"
hashbrown = "0.14"

hf_parser = { path = "../hf_parser" }

#x86/x64
iced-x86 = { version = "1.21.0", default-features = false, features = ["no_std","encoder","code_asm"] }
